# colcon-bash

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_bash/shell/: bash.py
colcon_bash/shell/template/: package.bash.em  prefix.bash.em  prefix_chain.bash.em
test/: spell_check.words  test_flake8.py  test_spell_check.py
