[metadata]
name = colcon-bash
version = attr: colcon_bash.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-bash/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-bash/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide Bash scripts.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.3.0
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = false

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-bash

[options.entry_points]
colcon_core.shell =
    bash = colcon_bash.shell.bash:BashShell

[options.package_data]
colcon_bash.shell.template = *.em

[flake8]
import-order-style = google
